Wed Jan 26 12:39:08 CET 2005 Daniel Veillard <veillard@redhat.com>

	* configure.in NEWS doc/* gamin.spec.in: preparing release 0.0.21
	* python/tests/Makefile.am python/tests/basic.py : added first example

Wed Jan 26 11:59:11 CET 2005 Daniel Veillard <veillard@redhat.com>

	* doc/*: added a page for the python bindings, updated the 
	  stylesheet and rebuilt the docs.

Wed Jan 26 10:26:15 CET 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_inotify.c server/local_inotify.h: applied patch
	  from Philipp Zabel to follow the evolution of the inotify 
	  protocol in 0.18

Tue Jan 25 18:39:34 CET 2005 Daniel Veillard <veillard@redhat.com>

	* configure.in Makefile.am gamin.spec.in python/Makefile.am
	  python/gamin.c python/gamin.py: added python bindings

Fri Jan 21 10:27:10 CET 2005 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_api.c: markmc pointed out a doc mismatch

Thu Jan 13 18:29:30 CET 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_channel.c: removing a compiler warning.

Thu Jan  6 16:10:20 CET 2005 Daniel Veillard <veillard@redhat.com>

	* NEWS configure.in gamin.spec.in: preparing release 0.0.20
	* doc/gamin.html doc/news.html: update to the web pages
	* server/gam_poll.c: trying to fix gnome bug #161792 compilation
	  problem.

Wed Jan  5 18:40:50 CET 2005 Frederic Crozat  <fcrozat@mandrakesoft.com>

	* server/gam_poll.c: (remove_directory_subscription), (prune_tree):
	Fix crash when removing files (bug #161902).

Wed Jan  5 18:32:45 CET 2005 Frederic Crozat  <fcrozat@mandrakesoft.com>

	* server/gam_poll.c: (prune_tree), (gam_poll_scan_all_callback):
	Update poll only mode to a working, non-crashing version.

Wed Jan  5 16:46:15 CET 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_poll.c: patch from Frederic Crozat to add poll only
	  support (helps with valgrind debugging).

Tue Dec 21 17:15:24 CET 2004 Daniel Veillard <veillard@redhat.com>

	* server/gam_tree.c: try to fix #143342 in gam_tree_get_children if